prevent open definition from overlapping drawer on mobile

--- a/regulations/static/regulations/css/less/layout.less
+++ b/regulations/static/regulations/css/less/layout.less
@@ -81,6 +81,7 @@ Main Content
     bottom: 0px;
     width: 240px;
     padding-bottom: 60px;
+    z-index: 300;
 }
 
 /*IE 9 does all sorts of whacky things with the box model and scrollbars. This should fix that*/
