--- a/regulations/static/regulations/css/less/module/drawer-small-screen.less
+++ b/regulations/static/regulations/css/less/module/drawer-small-screen.less
@@ -16,7 +16,6 @@ The drawer defaults to being displayed offscreen */
     left: -200px;
     top: 200px;
     overflow-y: hidden;
-    z-index: 0;
 
     /* position content fully offscreen*/
     .drawer-content {
